Fix header on mobile to fill screen

--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,10 +1,9 @@
 .header {
 	background: linear-gradient(165deg, $color-primary-deep, $color-primary-dark, $color-primary);
 	position: relative;
-	height: 55vh;
+	height: 95vh;
 
 	@media only screen and (min-width: 600px) {
-		height: 95vh;
 		-webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0 100%);
 		clip-path: polygon(0 0, 100% 0, 100% 70vh, 50% 90vh, 0 70vh);
 	}
